tests/testcase/errors/string_out_of_bounds.ob
fun main() do
  let str = "Hi";
  return str[10];
end